Added Itch Download for THWTD
Also tweaked the CSS margins for download buttons to give a little more space when shown vertically.

--- a/mystyle.css
+++ b/mystyle.css
@@ -330,7 +330,7 @@
 		font-family: SourceSansPro;
 		display: flex;
 		align-items: center;
-		margin-right: 1em;
+		margin: 0px 16px 6px 0px;
 	}
 	.download-button:hover {
 		background-color: #7F7F7F;
