Unordered List formatting
Added formatting to properly handle unordered lists, in my favorites on the home page and particularly nested lists on my Games > Forza page.

--- a/mystyle.css
+++ b/mystyle.css
@@ -68,6 +68,12 @@
 	ul {
 		margin: -10px 0px 20px -20px;
 	}
+	.ul-favorites-list {
+		margin: -10px 0px 20px -20px;
+	}
+	.ul-forza-awards {
+		margin: 0px 0px 20px -20px;
+	}
 	.remove-top-margin-text {
 		margin: 0em 0em 1em 0em;
 	}
@@ -463,6 +469,12 @@
 	ul {
 		margin: 3px 0px 15px -20px;
 	}
+	.ul-favorites-list {
+		margin: 3px 0px 15px -20px;
+	}
+	.ul-forza-awards {
+		margin: 3px 0px 15px -20px;
+	}
 	p {
 		color:#EEEEEE;
 	}
@@ -834,6 +846,12 @@
 		margin-bottom: 0em;
 	}
 	ul {
+		margin: 3px 0px 15px -20px;
+	}
+	.ul-favorites-list {
+		margin: 3px 0px 15px -20px;
+	}
+	.ul-forza-awards {
 		margin: 3px 0px 15px -20px;
 	}
 	p {
