Collapsibles - Text Cursor
Made the Text Cursor appear when mousing over the text of a collapsible object, instead of default (which is overriding the pointer for the Details element)

--- a/mystyle.css
+++ b/mystyle.css
@@ -497,7 +497,9 @@
 		background: #3D3D3D;
 		cursor: default;
 		font-family: SourceSansPro;
-		transition: max-height 0.5s ease-in;
+	}
+	.project-collapsible-text {
+		cursor: text;
 	}
 
 
