--- a/mystyle.css
+++ b/mystyle.css
@@ -285,6 +285,11 @@
 		background-color: #444444;
 		padding: .3em;
 	}
+	.content-quick-link-box:hover {
+		color: #000000;
+		background-color: #7F7F7F;
+		transition: all .2s ease-out;
+	}
 	.content-bio-div {
 		margin: 2em 7em 1em 7em;
 		display: flex;
@@ -744,6 +749,11 @@
 		border: .1em solid #CCCCCC;
 		background-color: #444444;
 	}
+	.content-quick-link-box:hover {
+		color: #000000;
+		background-color: #7F7F7F;
+		transition: all .2s ease-out;
+	}
 	.content-bio-div {
 		margin: 1em 1em 1em 1em;
 	}
@@ -1133,6 +1143,11 @@
 		padding: .2em;
 		border: .1em solid #CCCCCC;
 		background-color: #444444;
+	}
+	.content-quick-link-box:hover {
+		color: #000000;
+		background-color: #7F7F7F;
+		transition: all .2s ease-out;
 	}
 	.content-bio-div {
 		margin: 1em 1em 1em 1em;
