Fixed ReaScript Github Button
Not a perfect fix, but stopped it from fighting with the image on Desktop scales. Now it's super wide, but that works

--- a/mystyle.css
+++ b/mystyle.css
@@ -425,6 +425,7 @@
 	#button-reaper-repo {
 		display: block;
 		margin: 0px auto 0px auto;
+		float: none;
 	}
 	input[type='checkbox'] {
 		display: none;
