--- a/mystyle.css
+++ b/mystyle.css
@@ -152,11 +152,11 @@
 		padding: .4em;
 		z-index: 10;
 	}
-	#img-twitter-header {
+	#img-bsky-header {
 		height: 1.02em;
 		margin: 0em 0.05em;
 	}
-	#img-twitter-footer {
+	#img-bsky-footer {
 		width: 1.65em;
 		padding: .1em .1em 0em .1em;
 		margin: 0em .1em;
@@ -634,11 +634,11 @@
 		width: 4em;
 		padding: .4em;
 	}
-	#img-twitter-header {
+	#img-bsky-header {
 		height: 1.02em;
 		margin: 0em 0.05em;
 	}
-	#img-twitter-footer {
+	#img-bsky-footer {
 		width: 1.65em;
 		padding: .1em .1em 0em .1em;
 		margin: 0em .1em;
@@ -1065,7 +1065,7 @@
 		width: 4em;
 		padding: .4em;
 	}
-	#img-twitter-footer {
+	#img-bsky-footer {
 		width: 1.65em;
 		padding: .1em .1em 0em .1em;
 		margin: 0em .1em;
